--- a/styles.css
+++ b/styles.css
@@ -6,3 +6,73 @@ dark-blue - #134d71;
 white - #ffffff;
 black - #000000;
 */
+
+body {
+  background: linear-gradient(#134d71, #78a7c6, #f7e4bf);
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+}
+h1 {
+  text-align: center;
+  color: #ffffff;
+  font-family: 'Quicksand', sans-serif;
+  font-size: 35px;
+  padding-top: 20px;
+  padding-bottom: 50px;
+}
+h2 {
+  font-size: 30px;
+  margin-bottom: 5px;
+}
+.form-box {
+  display: flex;
+	justify-content: space-around;
+	align-content: space-between;
+}
+form {
+  background-color: #ffffff;
+  margin-bottom: 35px;
+  padding-top: 20px;
+  padding-bottom: 0px;
+  border-radius: 10px;
+  width: 600px;
+  height: 100px
+}
+.buttons {
+  font-size: 20px;
+  font-style: italic;
+  color: #000000;
+  display: flex;
+  justify-content: space-around;
+}
+input {
+  margin-bottom: 40px;
+  margin-right: -175px;
+  margin-top: 7px;
+  width: 60px;
+
+}
+.recieve {
+  display: flex;
+  justify-content: center;
+  font-size: 20px;
+  padding-top: 0px
+}
+button.message {
+  background-color: #134d71;
+  border-radius: 5px;
+  color: #ffffff;
+  font-size: 15px;
+  height: 25px;
+  width: 150px;
+}
+.sound-box {
+  background-color: #ffffff;
+  background-image: url(happy.svg);
+  border-radius: 10px;
+  color: black;
+  margin-top: 35px;
+  width: 800px;
+  height: 125px
+}
