--- a/styles.css
+++ b/styles.css
@@ -56,10 +56,11 @@ input {
 .recieve {
   display: flex;
   justify-content: center;
+  text-align: center;
   font-size: 20px;
   padding-top: 0px
 }
-button.message {
+input.button {
   background-color: #134d71;
   border-radius: 5px;
   color: #ffffff;
