--- a/styles.css
+++ b/styles.css
@@ -60,11 +60,12 @@ input {
   font-size: 20px;
   padding-top: 0px
 }
-input.button {
+#receive-message-button {
   background-color: #134d71;
   border-radius: 5px;
   color: #ffffff;
   font-size: 15px;
+  margin-right: 0px;
   height: 25px;
   width: 150px;
 }
@@ -72,6 +73,7 @@ input.button {
   background-color: #ffffff;
   border-radius: 10px;
   color: black;
+  font-size: 22px;
   margin-top: 45px;
   display: flex;
   justify-content: center;
