--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,9 @@ white - #ffffff;
 black - #000000;
 */
 
+.hidden {
+  display: none!important;
+}
 body {
   background: linear-gradient(#134d71, #78a7c6, #f7e4bf);
   height: 100vh;
@@ -18,8 +21,8 @@ h1 {
   color: #ffffff;
   font-family: 'Quicksand', sans-serif;
   font-size: 35px;
-  padding-top: 20px;
-  padding-bottom: 50px;
+  padding-top: 15px;
+  padding-bottom: 45px;
 }
 h2 {
   font-size: 30px;
@@ -83,4 +86,13 @@ input {
 }
 .meditating-human {
   height: 75px;
+}
+#clear-message-button {
+  background-color: #134d71;
+  border-radius: 5px;
+  color: #ffffff;
+  font-size: 15px;
+  margin-right: 0px;
+  height: 30px;
+  width: 125px;
 }
