--- a/styles.css
+++ b/styles.css
@@ -54,7 +54,6 @@ input {
   margin-right: -175px;
   margin-top: 7px;
   width: 60px;
-
 }
 .recieve {
   display: flex;
@@ -67,10 +66,17 @@ input {
   background-color: #134d71;
   border-radius: 5px;
   color: #ffffff;
-  font-size: 15px;
+  font-size: 12px;
   margin-right: 0px;
-  height: 25px;
-  width: 150px;
+  height: 20px;
+  width: 120px;
+}
+#receive-message-button:hover {
+  background-color: #f7e4bf;
+  color: #000000;
+  cursor: pointer;
+  transform: scale(1.25);
+  filter: brightness(120%);
 }
 .sound-box {
   background-color: #ffffff;
@@ -96,14 +102,53 @@ input {
   height: 30px;
   width: 125px;
 }
-@media only screen and (max-width: 800px) {
-  body {
-    background: linear-gradient(#134d71, #78a7c6, #f7e4bf);
+#clear-message-button:hover {
+  background-color: #f7e4bf;
+  color: #000000;
+  cursor: pointer;
+  transform: scale(1.25);
+  filter: brightness(120%);
+}
+@media screen and (max-width: 800px) {
+  .left, .main, .right {
+    width: 100%;
     height: 100vh;
-    display: flex;
-    align-items: center;
   }
   h1 {
-    padding-top: 300px;
+    font-size: 25px;
+  }
+  h2 {
+    font-size: 15px;
+  }
+  form {
+    margin-bottom: 45px;
+    padding-top: 20px;
+    padding-bottom: 0px;
+    border-radius: 10px;
+    width: 400px;
+    height: 50px
+  }
+  .buttons {
+    font-size: 15px;
+    display: flex;
+    justify-content: space-around;
+  }
+  input {
+    margin-bottom: 0px;
+    margin-right: -80px;
+    margin-top: 7px;
+    width: 60px;
+  }
+  #clear-message-button {
+    font-size: 9px;
+    margin-right: 0px;
+    height: 20px;
+    width: 75px;
+  }
+  .sound-box {
+    font-size: 15px;
+    margin-top: 45px;
+    width: 400px;
+    height: 100px
   }
 }
